// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renderer a link home in isolated mode 1`] = `
<Styled(ToolbarButton)
  dataTestID="Pizza-isolate-button"
  href="/#pizza"
  title="Show all components"
>
  <MdFullscreenExit />
</Styled(ToolbarButton)>
`;

exports[`should renderer a link to example isolated mode 1`] = `
<Styled(ToolbarButton)
  dataTestID="Pizza-3-isolate-button"
  href="/#!/Pizza/3"
  title="Open isolated"
>
  <MdFullscreen />
</Styled(ToolbarButton)>
`;

exports[`should renderer a link to isolated mode 1`] = `
<Styled(ToolbarButton)
  dataTestID="Pizza-isolate-button"
  href="/#!/Pizza"
  title="Open isolated"
>
  <MdFullscreen />
</Styled(ToolbarButton)>
`;
